# solana-u-estate

./: .dockerignore  .env.app.example  .env.deploy.example  .gitignore  Anchor.toml  Cargo.toml  DEMO_RUNBOOK.md  Dockerfile  PRD_MIGRACAO_SOLANA_INCREMENTADO_V1_5.md  README.md  docker-compose.yml  foundry.toml  package-lock.json  package.json  vitest.config.ts
archive/ethereum-sepolia-phase0/: README.md
bootstrap-app/: package-lock.json  package.json
contracts/script/: Deploy.s.sol
contracts/src/: PropertyRegistry.sol  PropertyValueTokenFactory.sol
contracts/test/: PropertyRegistry.t.sol  Setup.t.sol
offchain-db/: db.json
programs/usufruct_protocol/: Cargo.toml
programs/usufruct_protocol/src/: lib.rs
scripts/: anchor-docker-runner.sh  anchor-docker.ps1  deploy-solana-devnet.ps1  devnet-demo-utils.mjs  devnet-demo-utils.test.mjs  import-solana-deployer.cjs  import-solana-deployer.ps1  preflight-devnet-demo.mjs  reset-devnet-demo.mjs  smoke-ms3-devnet.mjs  smoke-ms4-devnet.mjs  smoke-ms5-devnet.mjs  smoke-ms6-devnet.mjs  smoke-ms7-devnet.mjs  solana-preflight.ps1
skills/a2-key-aggregation/: SKILL.md
skills/automation-upkeep/: SKILL.md
skills/best-practices/: SKILL.md
skills/checkout-batch-flow/: SKILL.md
skills/develop-frontend/: SKILL.md
skills/develop-web-game/: LICENSE.txt
skills/indexer-reorg-idempotent/: SKILL.md
skills/playwright/: LICENSE.txt  NOTICE.txt
skills/ponder-indexer-events/: SKILL.md
skills/release-config-management/: SKILL.md
skills/security-threat-checklist/: SKILL.md
tests/: usufruct_protocol.ts
(+94 files in other folders)
