[package]
name = "usufruct_protocol"
version = "0.1.0"
description = "Anchor program scaffold for the Solana migration of Usufruct Protocol."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usufruct_protocol"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "=0.32.1"
